--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
 export(ArchiveBest)
+export(Callback)
 export(Codomain)
+export(ContextInstance)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
@@ -41,6 +43,7 @@ export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
 export(branin)
+export(call_back)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
