feat: Add context

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Archive)
 export(ArchiveBest)
 export(Callback)
 export(Codomain)
+export(Context)
 export(ContextInstance)
 export(Objective)
 export(ObjectiveRFun)
