--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,19 +59,20 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder:
     knitr
+Remotes:
+    mlr-org/mlr3misc@callbacks
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
 Language: en-US
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Collate:
     'Archive.R'
     'ArchiveBest.R'
-    'Callback.R'
     'Codomain.R'
-    'Context.R'
+    'ContextOptimization.R'
     'Objective.R'
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
