--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
 export(ArchiveBest)
+export(CallbackOptimization)
 export(Codomain)
 export(ContextOptimization)
 export(Objective)
@@ -42,6 +43,7 @@ export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
 export(branin)
+export(callback_optimization)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
