feat: add archive callback

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -61,6 +61,8 @@ reference:
       - Codomain
   - title: Callbacks
     contents:
+      - CallbackOptimization
+      - callback_optimization
       - ContextOptimization
   - title: Misc
     contents:
