--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -107,6 +107,7 @@ Collate:
     'bibentries.R'
     'helper.R'
     'helper_irace.R'
+    'mlr_callbacks.R'
     'nds_selection.R'
     'sugar.R'
     'zzz.R'
