fix: reexport and news

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,10 @@ export(bb_optimize)
 export(bbotk_reflections)
 export(branin)
 export(callback_optimization)
+export(clbk)
+export(clbks)
 export(is_dominated)
+export(mlr_callbacks)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(nds_selection)
