--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
-Version: 0.5.4
+Version: 0.5.4.9000
 Authors@R:
     c(person(given = "Marc",
              family = "Becker",
@@ -109,5 +109,6 @@ Collate:
     'helper_irace.R'
     'mlr_callbacks.R'
     'nds_selection.R'
+    'reexport.R'
     'sugar.R'
     'zzz.R'
