--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -64,6 +64,7 @@ reference:
       - CallbackOptimization
       - callback_optimization
       - ContextOptimization
+      - bbotk.backup
   - title: Misc
     contents:
       - is_dominated
