feat: add callbacks (#180)
* feat: add callbacks

* fix: get_private()<- not yet available

* feat: Add context

* refactor: remove unnecessary Context object

* fix: don't execute non-existing step for callback

* undo last commit

* refactor: rewrite

* fix: return result

* fix: reflections

* docs: pkgdown

* refactor: as_callback and custom_callback

* refactor: callback subclasses

* feat: add archive callback

* docs: examples

* fix: reexport and news

* fix: mlr_callbacks

* chore: tidy

* chore: pkgdown

Co-authored-by: Sebastian Fischer <sebf.fischer@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
-Version: 0.5.4
+Version: 0.5.4.9000
 Authors@R:
     c(person(given = "Marc",
              family = "Becker",
@@ -45,7 +45,7 @@ Imports:
     data.table,
     lgr,
     methods,
-    mlr3misc (>= 0.10.0),
+    mlr3misc (>= 0.10.0-9000),
     R6
 Suggests:
     adagio,
@@ -59,6 +59,8 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder:
     knitr
+Remotes:
+    mlr-org/mlr3misc
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
@@ -69,7 +71,9 @@ RoxygenNote: 7.2.1
 Collate:
     'Archive.R'
     'ArchiveBest.R'
+    'CallbackOptimization.R'
     'Codomain.R'
+    'ContextOptimization.R'
     'Objective.R'
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
@@ -103,6 +107,8 @@ Collate:
     'bibentries.R'
     'helper.R'
     'helper_irace.R'
+    'mlr_callbacks.R'
     'nds_selection.R'
+    'reexport.R'
     'sugar.R'
     'zzz.R'
