--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
 export(ArchiveBest)
+export(CallbackOptimization)
 export(Codomain)
+export(ContextOptimization)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
@@ -41,7 +43,11 @@ export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
 export(branin)
+export(callback_optimization)
+export(clbk)
+export(clbks)
 export(is_dominated)
+export(mlr_callbacks)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(nds_selection)
