--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Imports:
     data.table,
     lgr,
     methods,
-    mlr3misc (>= 0.10.0-9000),
+    mlr3misc (>= 0.11.0),
     R6
 Suggests:
     adagio,
@@ -59,8 +59,6 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder:
     knitr
-Remotes:
-    mlr-org/mlr3misc
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
