feat: add ObjectiveRFunMany that can evaluate a list of configurations with a user supplied function.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,6 +75,7 @@ Collate:
     'Objective.R'
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
+    'ObjectiveRFunMany.R'
     'OptimInstance.R'
     'OptimInstanceMultiCrit.R'
     'OptimInstanceSingleCrit.R'
