--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ContextOptimization)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
+export(ObjectiveRFunMany)
 export(OptimInstance)
 export(OptimInstanceMultiCrit)
 export(OptimInstanceSingleCrit)
