refactor: constant set can be passed to objective when using OptimizerIrace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
 export(branin)
+export(branin_wu)
 export(callback_optimization)
 export(clbk)
 export(clbks)
