feat: add cparam tag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(as.data.table,DictionaryOptimizer)
 S3method(as.data.table,DictionaryTerminator)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
+S3method(format,rd_section_cparam)
+S3method(merge,rd_section_cparam)
 export(Archive)
 export(ArchiveBest)
 export(CallbackOptimization)
