--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
-Version: 0.7.0.9000
+Version: 0.7.1
 Authors@R:
     c(person(given = "Marc",
              family = "Becker",
@@ -30,10 +30,11 @@ Authors@R:
              family = "Mersmann",
              role = "ctb",
              email = "olafm@statistik.tu-dortmund.de"))
-Description: Provides a common framework for optimization of black-box
-    functions for other packages, e.g. 'mlr3tuning' or 'mlr3fselect'. It
-    offers various optimization methods e.g. grid search, random search,
-    generalized simulated annealing and iterated racing.
+Description: Features highly configurable search spaces via the paradox package
+    and optimizes every user-defined objective function. The package includes
+    several optimization algorithms e.g. Random Search, Iterated Racing,
+    Bayesian Optimization (in mlr3mbo) and Hyperband (in mlr3hyperband). bbotk
+    is the base package of mlr3tuning, mlr3fselect and miesmuschel.
 License: LGPL-3
 URL: https://bbotk.mlr-org.com, https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
@@ -65,7 +66,7 @@ Encoding: UTF-8
 Language: en-US
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
 Collate:
     'Archive.R'
     'ArchiveBest.R'
