--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,8 @@ Suggests:
     progressr,
     rmarkdown,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/paradox@s3_params
 VignetteBuilder:
     knitr
 Config/testthat/edition: 3
