refactor: worker_loop

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,7 +92,7 @@ Collate:
     'OptimizerIrace.R'
     'OptimizerNLoptr.R'
     'OptimizerRandomSearch.R'
-    'OptimizerSuccessiveHalving.R'
+    'OptimizerSHA.R'
     'Progressor.R'
     'mlr_terminators.R'
     'Terminator.R'
