chore: remove assertion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(assert_terminator)
 export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
+export(bbotk_worker_loop)
 export(branin)
 export(branin_wu)
 export(callback_optimization)
@@ -60,6 +61,7 @@ export(opt)
 export(optimize_default)
 export(opts)
 export(shrink_ps)
+export(trafo_xs)
 export(transform_xdt_to_xss)
 export(trm)
 export(trms)
