--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,8 @@ Suggests:
     redux,
     rush,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/rush
 VignetteBuilder:
     knitr
 Config/testthat/edition: 3
