feat: capture log on worker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(opt)
 export(optimize_default)
 export(opts)
 export(shrink_ps)
+export(terminated_error)
 export(trafo_xs)
 export(transform_xdt_to_xss)
 export(trm)
