--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -86,6 +86,9 @@ Collate:
     'ObjectiveRFunMany.R'
     'OptimInstance.R'
     'OptimInstanceMultiCrit.R'
+    'OptimInstanceRush.R'
+    'OptimInstanceRushMultiCrit.R'
+    'OptimInstanceRushSingleCrit.R'
     'OptimInstanceSingleCrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
