--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,12 @@ S3method(as.data.table,Archive)
 S3method(as.data.table,ArchiveRush)
 S3method(as.data.table,DictionaryOptimizer)
 S3method(as.data.table,DictionaryTerminator)
+S3method(assign_result_default,OptimInstance)
+S3method(assign_result_default,OptimInstanceRush)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
+S3method(optimize_default,OptimInstance)
+S3method(optimize_default,OptimInstanceRush)
 export(Archive)
 export(ArchiveBest)
 export(ArchiveRush)
@@ -18,6 +22,9 @@ export(ObjectiveRFunDt)
 export(ObjectiveRFunMany)
 export(OptimInstance)
 export(OptimInstanceMultiCrit)
+export(OptimInstanceRush)
+export(OptimInstanceRushMultiCrit)
+export(OptimInstanceRushSingleCrit)
 export(OptimInstanceSingleCrit)
 export(Optimizer)
 export(OptimizerCmaes)
@@ -56,6 +63,7 @@ export(mlr_callbacks)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(nds_selection)
+export(oi)
 export(opt)
 export(optimize_default)
 export(opts)
