--- a/.github/workflows/r-cmd-check-paradox.yml
+++ b/.github/workflows/r-cmd-check-paradox.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
 
-name: r-cmd-check
+name: r-cmd-check-paradox
 
 jobs:
   r-cmd-check:
@@ -30,6 +30,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: paradox
+        run: 'echo "Remotes:\n    mlr-org/paradox@s3_params" >> DESCRIPTION'
+
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
@@ -38,7 +41,4 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-      - name: paradox
-        shell: Rscript {0}
-        run: 'remotes::install_github("mlr-org/paradox@s3_params")'
       - uses: r-lib/actions/check-r-package@v2
