--- a/.github/workflows/r-cmd-check-paradox.yml
+++ b/.github/workflows/r-cmd-check-paradox.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: paradox
-        run: 'echo "Remotes:\n    mlr-org/paradox@s3_params" >> DESCRIPTION'
+        run: 'echo -e "Remotes:\n    mlr-org/paradox@s3_params" >> DESCRIPTION'
 
       - uses: r-lib/actions/setup-r@v2
         with:
