--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(OptimizerGridSearch)
 export(OptimizerIrace)
 export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
+export(OptimizerRandomSearchV2)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
@@ -52,7 +53,8 @@ export(assert_terminator)
 export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
-export(bbotk_worker_loop)
+export(bbotk_worker_loop_centralized)
+export(bbotk_worker_loop_decentralized)
 export(branin)
 export(branin_wu)
 export(callback_optimization)
@@ -79,6 +81,9 @@ import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
 importFrom(methods,formalArgs)
+importFrom(mlr3misc,clbk)
+importFrom(mlr3misc,clbks)
+importFrom(mlr3misc,mlr_callbacks)
 importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
