feat: optimize_decentralized

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(mlr_terminators)
 export(nds_selection)
 export(oi)
 export(opt)
+export(optimize_decentralized)
 export(optimize_default)
 export(opts)
 export(shrink_ps)
