--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(as.data.table,Archive)
 S3method(as.data.table,ArchiveRush)
 S3method(as.data.table,DictionaryOptimizer)
 S3method(as.data.table,DictionaryTerminator)
+S3method(as_terminator,Terminator)
+S3method(as_terminators,default)
+S3method(as_terminators,list)
 S3method(assign_result_default,OptimInstance)
 S3method(assign_result_default,OptimInstanceRush)
 S3method(bb_optimize,"function")
@@ -45,11 +48,14 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(as_terminator)
+export(as_terminators)
 export(assert_instance_properties)
 export(assert_optimizer)
 export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
+export(assert_terminators)
 export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
