refactor: async classes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -85,13 +85,17 @@ Collate:
     'ObjectiveRFunDt.R'
     'ObjectiveRFunMany.R'
     'OptimInstance.R'
+    'OptimInstanceAsync.R'
+    'OptimInstanceAsyncMultiCrit.R'
+    'OptimInstanceAsyncSingleCrit.R'
     'OptimInstanceMultiCrit.R'
-    'OptimInstanceRush.R'
-    'OptimInstanceRushMultiCrit.R'
-    'OptimInstanceRushSingleCrit.R'
     'OptimInstanceSingleCrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
+    'OptimizerAsync.R'
+    'OptimizerAsyncDesignPoints.R'
+    'OptimizerAsyncGridSearch.R'
+    'OptimizerAsyncRandomSearch.R'
     'OptimizerCmaes.R'
     'OptimizerDesignPoints.R'
     'OptimizerFocusSearch.R'
@@ -100,7 +104,6 @@ Collate:
     'OptimizerIrace.R'
     'OptimizerNLoptr.R'
     'OptimizerRandomSearch.R'
-    'OptimizerRandomSearchV2.R'
     'Progressor.R'
     'mlr_terminators.R'
     'Terminator.R'
