--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,8 @@ S3method(as.data.table,DictionaryTerminator)
 S3method(as_terminator,Terminator)
 S3method(as_terminators,default)
 S3method(as_terminators,list)
-S3method(assign_result_default,OptimInstance)
-S3method(assign_result_default,OptimInstanceRush)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
-S3method(optimize_default,OptimInstance)
-S3method(optimize_default,OptimInstanceRush)
 export(Archive)
 export(ArchiveBest)
 export(ArchiveRush)
@@ -24,12 +20,16 @@ export(ObjectiveRFun)
 export(ObjectiveRFunDt)
 export(ObjectiveRFunMany)
 export(OptimInstance)
+export(OptimInstanceAsync)
+export(OptimInstanceAsyncMultiCrit)
+export(OptimInstanceAsyncSingleCrit)
 export(OptimInstanceMultiCrit)
-export(OptimInstanceRush)
-export(OptimInstanceRushMultiCrit)
-export(OptimInstanceRushSingleCrit)
 export(OptimInstanceSingleCrit)
 export(Optimizer)
+export(OptimizerAsync)
+export(OptimizerAsyncDesignPoints)
+export(OptimizerAsyncGridSearch)
+export(OptimizerAsyncRandomSearch)
 export(OptimizerCmaes)
 export(OptimizerDesignPoints)
 export(OptimizerFocusSearch)
@@ -38,7 +38,6 @@ export(OptimizerGridSearch)
 export(OptimizerIrace)
 export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
-export(OptimizerRandomSearchV2)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
@@ -66,6 +65,7 @@ export(branin_wu)
 export(callback_optimization)
 export(clbk)
 export(clbks)
+export(finish_async_optimize)
 export(is_dominated)
 export(mlr_callbacks)
 export(mlr_optimizers)
@@ -73,15 +73,16 @@ export(mlr_terminators)
 export(nds_selection)
 export(oi)
 export(opt)
-export(optimize_decentralized)
 export(optimize_default)
 export(opts)
 export(shrink_ps)
+export(start_async_optimize)
 export(terminated_error)
 export(trafo_xs)
 export(transform_xdt_to_xss)
 export(trm)
 export(trms)
+export(wait_for_async_optimize)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
