--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ S3method(as_terminators,list)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
-export(ArchiveBest)
 export(ArchiveAsync)
+export(ArchiveBest)
 export(CallbackOptimization)
 export(Codomain)
 export(ContextOptimization)
@@ -58,8 +58,7 @@ export(assert_terminators)
 export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
-export(bbotk_worker_loop_centralized)
-export(bbotk_worker_loop_decentralized)
+export(bbotk_worker_loop)
 export(branin)
 export(branin_wu)
 export(callback_optimization)
@@ -72,6 +71,7 @@ export(mlr_optimizers)
 export(mlr_terminators)
 export(nds_selection)
 export(oi)
+export(oi_async)
 export(opt)
 export(optimize_default)
 export(opts)
