--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,7 +75,8 @@ RoxygenNote: 7.3.1
 Collate:
     'Archive.R'
     'ArchiveAsync.R'
-    'ArchiveBest.R'
+    'ArchiveBatch.R'
+    'ArchiveBatchBest.R'
     'CallbackOptimization.R'
     'Codomain.R'
     'ContextOptimization.R'
@@ -87,22 +88,25 @@ Collate:
     'OptimInstanceAsync.R'
     'OptimInstanceAsyncMultiCrit.R'
     'OptimInstanceAsyncSingleCrit.R'
-    'OptimInstanceMultiCrit.R'
-    'OptimInstanceSingleCrit.R'
+    'OptimInstanceBatch.R'
+    'OptimInstanceBatchMultiCrit.R'
+    'OptimInstanceBatchSingleCrit.R'
+    'OptimInstanceSync.R'
     'mlr_optimizers.R'
     'Optimizer.R'
     'OptimizerAsync.R'
     'OptimizerAsyncDesignPoints.R'
     'OptimizerAsyncGridSearch.R'
     'OptimizerAsyncRandomSearch.R'
-    'OptimizerCmaes.R'
-    'OptimizerDesignPoints.R'
-    'OptimizerFocusSearch.R'
-    'OptimizerGenSA.R'
-    'OptimizerGridSearch.R'
-    'OptimizerIrace.R'
-    'OptimizerNLoptr.R'
-    'OptimizerRandomSearch.R'
+    'OptimizerBatch.R'
+    'OptimizerBatchCmaes.R'
+    'OptimizerBatchDesignPoints.R'
+    'OptimizerBatchFocusSearch.R'
+    'OptimizerBatchGenSA.R'
+    'OptimizerBatchGridSearch.R'
+    'OptimizerBatchIrace.R'
+    'OptimizerBatchNLoptr.R'
+    'OptimizerBatchRandomSearch.R'
     'Progressor.R'
     'mlr_terminators.R'
     'Terminator.R'
