--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,8 +77,10 @@ Collate:
     'ArchiveAsync.R'
     'ArchiveBatch.R'
     'ArchiveBatchBest.R'
+    'CallbackAsync.R'
     'CallbackOptimization.R'
     'Codomain.R'
+    'ContextAsync.R'
     'ContextOptimization.R'
     'Objective.R'
     'ObjectiveRFun.R'
