--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(Archive)
 export(ArchiveAsync)
 export(ArchiveBatch)
 export(ArchiveBatchBest)
+export(CallbackAsync)
 export(CallbackOptimization)
 export(Codomain)
+export(ContextAsync)
 export(ContextOptimization)
 export(Objective)
 export(ObjectiveRFun)
@@ -63,10 +65,12 @@ export(bbotk_reflections)
 export(bbotk_worker_loop)
 export(branin)
 export(branin_wu)
+export(callback_async)
 export(callback_optimization)
 export(clbk)
 export(clbks)
 export(finish_async_optimize)
+export(finish_optimize_batch_bbotk)
 export(is_dominated)
 export(mlr_callbacks)
 export(mlr_optimizers)
@@ -77,8 +81,10 @@ export(oi_async)
 export(opt)
 export(optimize_batch_default)
 export(opts)
+export(run_optimize_batch_bbotk)
 export(shrink_ps)
 export(start_async_optimize)
+export(start_optimize_batch_bbotk)
 export(terminated_error)
 export(trafo_xs)
 export(transform_xdt_to_xss)
