--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(CallbackAsync)
 export(CallbackOptimization)
 export(Codomain)
 export(ContextAsync)
-export(ContextOptimization)
+export(ContextBatch)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
@@ -79,7 +79,6 @@ export(nds_selection)
 export(oi)
 export(oi_async)
 export(opt)
-export(optimize_batch_default)
 export(opts)
 export(run_optimize_batch_bbotk)
 export(shrink_ps)
