--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,8 +53,8 @@ export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
 export(as_terminator)
 export(as_terminators)
-export(assert_async_instance)
-export(assert_async_optimizer)
+export(assert_instance_async)
+export(assert_optimizer_async)
 export(assert_instance)
 export(assert_instance_properties)
 export(assert_optimizer)
