--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,11 +53,15 @@ export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
 export(as_terminator)
 export(as_terminators)
-export(assert_instance_async)
-export(assert_optimizer_async)
+export(assert_archive)
+export(assert_archive_async)
+export(assert_archive_batch)
 export(assert_instance)
+export(assert_instance_async)
 export(assert_instance_properties)
 export(assert_optimizer)
+export(assert_optimizer_async)
+export(assert_optimizer_batch)
 export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
