fix: remove deep clone from archivasync

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,9 @@ import(paradox)
 import(rush)
 importFrom(R6,R6Class)
 importFrom(methods,formalArgs)
+importFrom(mlr3misc,clbk)
+importFrom(mlr3misc,clbks)
+importFrom(mlr3misc,mlr_callbacks)
 importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
