--- a/.github/workflows/dev-cmd-check.yml
+++ b/.github/workflows/dev-cmd-check.yml
@@ -47,3 +47,5 @@ jobs:
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
+        with:
+          args: 'c("--no-manual")' # "--as-cran" prevents to start external processes
