--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ VignetteBuilder:
     knitr
 Remotes:
     mlr-org/mlr3misc,
-    mlr-org/paradox,
+    mlr-org/paradox@feat/inner_valid,
     mlr-org/rush
 Config/testthat/edition: 3
 Config/testthat/parallel: false
