refactor: add deprecated message to instances

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(OptimInstanceAsyncSingleCrit)
 export(OptimInstanceBatch)
 export(OptimInstanceBatchMultiCrit)
 export(OptimInstanceBatchSingleCrit)
+export(OptimInstanceMultiCrit)
+export(OptimInstanceSingleCrit)
 export(Optimizer)
 export(OptimizerAsync)
 export(OptimizerAsyncDesignPoints)
