--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
 Version: 0.8.0.9000
-Authors@R:c(
+Authors@R: c(
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-8115-0400")),
     person("Jakob", "Richter", , "jakob1richter@gmail.com", role = "aut",
@@ -77,6 +77,8 @@ Collate:
     'OptimInstanceBatch.R'
     'OptimInstanceBatchMultiCrit.R'
     'OptimInstanceBatchSingleCrit.R'
+    'OptimInstanceMultiCrit.R'
+    'OptimInstanceSingleCrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
     'OptimizerAsync.R'
