--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,7 @@ export(transform_xdt_to_xss)
 export(trm)
 export(trms)
 import(checkmate)
+import(cli)
 import(data.table)
 import(mlr3misc)
 import(paradox)
