--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -2,6 +2,8 @@ url: https://bbotk.mlr-org.com
 
 template:
   bootstrap: 5
+  light-switch: true
+  math-rendering: mathjax
   package: mlr3pkgdowntemplate
 
 development:
@@ -15,9 +17,13 @@ toc:
 navbar:
   structure:
     left:  [reference, news, book]
-    right: [github, mattermost, stackoverflow, rss]
+    right: [github, mattermost, stackoverflow, rss, lightswitch]
   components:
     home: ~
+    reference:
+      icon: fa fa-file-alt
+      text: Reference
+      href: reference/index.html
     mattermost:
       icon: fa fa-comments
       href: https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/
@@ -27,11 +33,10 @@ navbar:
       href: https://mlr3book.mlr-org.com
     stackoverflow:
       icon: fab fa-stack-overflow
-      href: https://stackoverflow.com/questions/tagged/mlr3
+      href: https://stackoverflow.com/questions/tagged/mlr
     rss:
       icon: fa-rss
       href: https://mlr-org.com/
-
 reference:
   - title: Package
     contents:
