--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,7 @@ Suggests:
     adagio,
     emoa,
     GenSA,
-    irace (>= 3.5),
+    irace (>= 3.9.0.9000),
     knitr,
     nloptr,
     progressr,
@@ -45,6 +45,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     rush
+Remotes:
+    MLopez-Ibanez/irace
 VignetteBuilder:
     knitr
 Config/testthat/edition: 3
