--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(OptimizerBatchFocusSearch)
 export(OptimizerBatchGenSA)
 export(OptimizerBatchGridSearch)
 export(OptimizerBatchIrace)
+export(OptimizerBatchLocalSearch)
 export(OptimizerBatchNLoptr)
 export(OptimizerBatchRandomSearch)
 export(Terminator)
