--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(TerminatorStagnationHypervolume)
 export(as_terminator)
 export(as_terminators)
 export(assert_archive)
