feat: add stagnation hypervolume terminator (#249)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(TerminatorStagnationHypervolume)
 export(as_terminator)
 export(as_terminators)
 export(assert_archive)
