--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,6 +103,7 @@ Collate:
     'TerminatorRunTime.R'
     'TerminatorStagnation.R'
     'TerminatorStagnationBatch.R'
+    'TerminatorStagnationHypervolume.R'
     'as_terminator.R'
     'assertions.R'
     'bb_optimize.R'
