--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -29,6 +29,10 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
 
+      - uses: supercharge/redis-github-action@1.7.0
+        with:
+        redis-version: 7
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::pkgdown, local::.
