--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(OptimizerAsyncDesignPoints)
 export(OptimizerAsyncGridSearch)
 export(OptimizerAsyncRandomSearch)
 export(OptimizerBatch)
+export(OptimizerBatchChain)
 export(OptimizerBatchCmaes)
 export(OptimizerBatchDesignPoints)
 export(OptimizerBatchFocusSearch)
@@ -106,6 +107,7 @@ importFrom(methods,formalArgs)
 importFrom(mlr3misc,clbk)
 importFrom(mlr3misc,clbks)
 importFrom(mlr3misc,mlr_callbacks)
+importFrom(stats,setNames)
 importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
