--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
 export(ArchiveAsync)
+export(ArchiveAsyncFrozen)
 export(ArchiveBatch)
 export(CallbackAsync)
 export(CallbackBatch)
