--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,8 @@ Suggests:
     redux,
     testthat (>= 3.0.0),
     rush (>= 0.1.2)
+Remotes:
+    mlr-org/rush@mirai
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
