--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(OptimizerAsyncRandomSearch)
 export(OptimizerBatch)
 export(OptimizerBatchChain)
 export(OptimizerBatchCmaes)
+export(OptimizerBatchDEoptim)
 export(OptimizerBatchDesignPoints)
 export(OptimizerBatchFocusSearch)
 export(OptimizerBatchGenSA)
