--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
-Version: 1.5.0.9000
+Version: 1.6.0
 Authors@R: c(
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-8115-0400")),
@@ -41,14 +41,12 @@ Suggests:
     knitr,
     mirai,
     nloptr,
-    progressr,
     processx,
+    progressr,
     redux,
     RhpcBLASctl,
-    testthat (>= 3.0.0),
-    rush (>= 0.2.0)
-Remotes:
-    mlr-org/rush
+    rush (>= 0.2.0),
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
