--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,6 +92,7 @@ Collate:
     'OptimizerBatchGridSearch.R'
     'OptimizerBatchIrace.R'
     'OptimizerBatchLocalSearch.R'
+    'OptimizerBatchLocalSearch2.R'
     'OptimizerBatchNLoptr.R'
     'OptimizerBatchRandomSearch.R'
     'Progressor.R'
@@ -112,7 +113,6 @@ Collate:
     'bbotk_reflections.R'
     'bibentries.R'
     'helper.R'
-    'local_search_c.R'
     'mlr_callbacks.R'
     'nds_selection.R'
     'reexport.R'
