--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(OptimizerBatchGenSA)
 export(OptimizerBatchGridSearch)
 export(OptimizerBatchIrace)
 export(OptimizerBatchLocalSearch)
+export(OptimizerBatchLocalSearch2)
 export(OptimizerBatchNLoptr)
 export(OptimizerBatchRandomSearch)
 export(Terminator)
@@ -97,7 +98,6 @@ export(shrink_ps)
 export(terminated_error)
 export(trafo_xs)
 export(transform_xdt_to_xss)
-export(local_search_c)
 export(trm)
 export(trms)
 import(checkmate)
@@ -115,4 +115,4 @@ importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,tail)
-useDynLib(bbotk,c_is_dominated,c_local_search)
+useDynLib(bbotk,c_is_dominated)
