--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,4 +115,4 @@ importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,tail)
-useDynLib(bbotk,c_is_dominated)
+useDynLib(bbotk,c_is_dominated,c_local_search)
