--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,6 @@ export(OptimizerBatchGenSA)
 export(OptimizerBatchGridSearch)
 export(OptimizerBatchIrace)
 export(OptimizerBatchLocalSearch)
-export(OptimizerBatchLocalSearch2)
 export(OptimizerBatchNLoptr)
 export(OptimizerBatchRandomSearch)
 export(Terminator)
@@ -115,4 +114,4 @@ importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,tail)
-useDynLib(bbotk,c_is_dominated,c_local_search)
+useDynLib(bbotk,c_is_dominated)
