--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -45,4 +45,4 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual")' # "--as-cran" prevents to start external processes
+          args: 'c("--no-manual", "--as-cran")'
