--- a/.github/workflows/no-suggest-cmd-check.yml
+++ b/.github/workflows/no-suggest-cmd-check.yml
@@ -59,3 +59,5 @@ jobs:
           limit-access-to-actor: true
 
       - uses: r-lib/actions/check-r-package@v2
+        with:
+          args: 'c("--no-manual", "--as-cran")'
