--- a/.github/workflows/dev-cmd-check.yml
+++ b/.github/workflows/dev-cmd-check.yml
@@ -31,9 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/bbotk'}
-          - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3'}
-          - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3misc'}
+          - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/pardox'}
 
     steps:
       - uses: actions/checkout@v3
@@ -57,7 +55,7 @@ jobs:
       - name: Install dev versions
         run: pak::pkg_install('${{ matrix.config.dev-package }}')
         shell: Rscript {0}
-      
+
       - uses: mxschmitt/action-tmate@v3
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
         with:
