--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(callback_batch)
 export(clbk)
 export(clbks)
 export(is_dominated)
+export(local_search)
 export(mlr_callbacks)
 export(mlr_optimizers)
 export(mlr_terminators)
