--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(clbk)
 export(clbks)
 export(is_dominated)
 export(local_search)
+export(local_search_control)
 export(mlr_callbacks)
 export(mlr_optimizers)
 export(mlr_terminators)
